--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <li><a href="3.html">JavaScript</a></li>
   </ol>
   <h2>WEB</h2>
+  <p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE"
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
+    clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
+  </p>
   <p><a href="http://www.w3.org/TR/html5/" target="_blank"
   title="html5 specification">
   The World Wide Web (WWW)</a> commonly known as the Web, is an information system
@@ -25,5 +31,26 @@
    the Web in some form by over two decades and upon the technologies of
    which the Web is built.
   </p>
+  <p>
+  <div id="disqus_thread"></div>
+  <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://web1-jjm4l9fuph.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </body>
 </html>
